--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-palette": "^1.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^2.1.8",
     "react-simple-chatbot": "^0.6.1",
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
